aws/gateways.tf
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = merge({ "Name" = "${module.generator.prefix}-igw" },
    module.generator.common_tags
  )
}
